# raw_image_pipeline

./: LICENSE  README.md  jenkins-pipeline
debayer_cuda/: CMakeLists.txt  nodelet_plugins.xml
debayer_cuda/launch/: debayer_cuda_node.launch  debayer_cuda_nodelet.launch
debayer_cuda/setup/: setup_jetson_with_opencv_xphoto.md
debayer_cuda/src/: debayer_cuda_nodelet.cpp
debayer_cuda_alphasense/: CMakeLists.txt  nodelet_plugins.xml  package.xml
debayer_cuda_alphasense/include/debayer_cuda/: debayer_cuda.h
debayer_cuda_alphasense/launch/: debayer_cuda_nodelet.launch  node_test.launch
debayer_cuda_alphasense/src/: debayer_cuda.cpp  debayer_cuda_node.cpp
docs/: alphasense_rsl_log.md  alphasense_setup.md  jetson_setup.md
ffcc_catkin/: CMakeLists.txt  package.xml
ffcc_catkin/cfg/: ffcc.cfg
ffcc_catkin/include/ffcc_catkin/: ffcc.hpp
ffcc_catkin/src/: ffcc_node.cpp
ffcc_catkin/src/ffcc_catkin/: ffcc.cpp
image_proc_cuda/: CMakeLists.txt  package.xml
image_proc_cuda/config/: alphasense_calib_example.yaml  alphasense_color_calib_example.yaml  pipeline_params_example.yaml
image_proc_cuda/include/image_proc_cuda/: image_proc_cuda.hpp  utils.hpp
image_proc_cuda/include/image_proc_cuda/modules/: color_calibration.hpp  color_enhancer.hpp  debayer.hpp  flip.hpp  gamma_correction.hpp  undistortion.hpp  vignetting_correction.hpp  white_balance.hpp
image_proc_cuda/src/: image_proc_cuda.cpp
image_proc_cuda/src/image_proc_cuda/: image_proc_cuda.cpp
image_proc_cuda/src/image_proc_cuda/modules/: color_calibration.cpp  color_enhancer.cpp  debayer.cpp  flip.cpp  gamma_correction.cpp  undistortion.cpp  vignetting_correction.cpp  white_balance.cpp
image_proc_cuda_python/: CMakeLists.txt  package.xml  setup.py
image_proc_cuda_python/scripts/: apply_pipeline.py  color_calibration.py
image_proc_cuda_python/src/: image_proc_cuda_python.cpp
image_proc_cuda_python/src/py_image_proc_cuda/: __init__.py
image_proc_cuda_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
image_proc_cuda_ros/include/image_proc_cuda_ros/: image_proc_cuda_ros.hpp
image_proc_cuda_ros/launch/: image_proc_cuda_node.launch
image_proc_cuda_ros/src/: image_proc_cuda_ros.cpp  image_proc_cuda_ros_node.cpp  image_proc_cuda_ros_nodelet.cpp
image_proc_white_balance/: CMakeLists.txt  package.xml
image_proc_white_balance/cfg/: ImageProcWhiteBalance.cfg  image_proc_white_balance.cfg
image_proc_white_balance/include/image_proc_white_balance/: convolutional_color_constancy.hpp
image_proc_white_balance/src/: image_proc_white_balance_node.cpp
image_proc_white_balance/src/image_proc_white_balance/: convolutional_color_constancy.cpp
raw_image_pipeline/: CMakeLists.txt  package.xml
raw_image_pipeline/config/: alphasense_calib_1.6mp_example.yaml  alphasense_calib_example.yaml  alphasense_color_calib_example.yaml  pipeline_params_example.yaml
raw_image_pipeline/include/raw_image_pipeline/: raw_image_pipeline.hpp  utils.hpp
raw_image_pipeline/include/raw_image_pipeline/modules/: color_calibration.hpp  color_enhancer.hpp  debayer.hpp  flip.hpp  gamma_correction.hpp  undistortion.hpp  vignetting_correction.hpp  white_balance.hpp
raw_image_pipeline/src/raw_image_pipeline/: raw_image_pipeline.cpp
raw_image_pipeline/src/raw_image_pipeline/modules/: color_calibration.cpp  color_enhancer.cpp  debayer.cpp  flip.cpp  gamma_correction.cpp  undistortion.cpp  vignetting_correction.cpp  white_balance.cpp
raw_image_pipeline_python/: CMakeLists.txt  package.xml  setup.py
raw_image_pipeline_python/scripts/: apply_pipeline.py  color_calibration.py
raw_image_pipeline_python/src/: raw_image_pipeline_python.cpp
raw_image_pipeline_python/src/py_raw_image_pipeline/: __init__.py
raw_image_pipeline_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
raw_image_pipeline_ros/config/rqt/: alphasense.perspective
raw_image_pipeline_ros/include/raw_image_pipeline_ros/: raw_image_pipeline_ros.hpp
raw_image_pipeline_ros/launch/: raw_image_pipeline_node.launch
raw_image_pipeline_ros/src/: raw_image_pipeline_ros.cpp  raw_image_pipeline_ros_node.cpp  raw_image_pipeline_ros_nodelet.cpp
raw_image_pipeline_white_balance/: CMakeLists.txt  package.xml
raw_image_pipeline_white_balance/cfg/: RawImagePipelineWhiteBalance.cfg  raw_image_pipeline_white_balance.cfg
raw_image_pipeline_white_balance/include/raw_image_pipeline_white_balance/: convolutional_color_constancy.hpp
raw_image_pipeline_white_balance/src/: raw_image_pipeline_white_balance_node.cpp
raw_image_pipeline_white_balance/src/raw_image_pipeline_white_balance/: convolutional_color_constancy.cpp
utils/pc_setup_instructions/jetson/: setup.md
