<?xml version="1.0"?>
<package format="2">
  <name>debayer_cuda_alphasense</name>
  <version>0.0.0</version>
  <description>Debayering node for ANYmal C's Jetson</description>

  <maintainer email="timonh@leggedrobotics.com">Timon Homberger</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>


</package>

