<?xml version="1.0"?>
<package format="2">
  <name>image_proc_cuda</name>
  <version>0.0.0</version>
  <description>ROS-independent image proc cuda pipeline</description>

  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>
  <author email="timonh@leggedrobotics.com">Timon Homberger</author>
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>nvidia-cuda</depend>
  <depend>nvidia-cuda-dev</depend>
  <depend>ffcc_catkin</depend>
  <depend>pybind11_catkin</depend>
  
</package>

