<?xml version="1.0"?>
<package format="2">
  <name>image_proc_cuda_ros</name>
  <version>0.0.0</version>
  <description>ROS interfaces for image_proc_cuda</description>

  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>
  <author email="timonh@leggedrobotics.com">Timon Homberger</author>
  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>

  <license>Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>image_proc_cuda</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>
  <depend>glog_catkin</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>


</package>

