<?xml version="1.0"?>
<package format="2">
  <name>raw_image_pipeline_white_balance</name>
  <version>0.0.0</version>
  <description>Cpp implementation of CCC/FFCC white balance</description>

  <author email="name@email.com">Shane Yuan</author>
  <author email="matias@robots.ox.ac.uk">Matias Mattamala</author>

  <maintainer email="matias@robots.ox.ac.uk">Matias Mattamala</maintainer>
  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>


</package>
